base/snippets.scss
/**
 * Any non-site-specific tools and code snippets
 *
 * @author Thomas Bredin-Grey <thomas@panmedia.co.nz>
 * @author Hemi Ormsby <hemi@panmedia.co.nz>
 * @url https://github.com/tbredin/OnionKnight
 */

// Returns a unitless number
@function no-unit($number) {
    $result: 0;
    @if unit($number) == "px" {
        $result: $number / 1px;
    } @else if unit($number) == "em" {
        $result: $number / 1em;
    } @else if unit($number) == "%" {
        $result: $number / 1%;
    }
    @return $result;
}


// Converts a px value to ems. Should only work in absolute em document context (root level)
@function px-to-ems($value) {
    @if unit($value) == "px" {
        $value : no-unit($value) / no-unit($base-font-size);
        $value : $value * 1em;
    }
    @return $value;
}


// Converts an em value to px. Should only work in absolute em document context (root level)
@function em-to-px($value) {
    @if unit($value) == "em" {
        $value : no-unit($value) * no-unit($base-font-size);
        $value : $value * 1px;
    }
    @return $value;
}


// cross-browser rem units.
@mixin rem($property, $value) {
    #{$property}: $value * $base-font-size;
    #{$property}: #{$value}rem;
}


// embosses box
@mixin box-emboss($opacity, $opacity2){
    box-shadow: white($opacity) 0 1px 0, inset black($opacity2) 0 1px 0;
}


// Gradient with background color fallback for legacy browsers
@mixin gradient-with-bgc($colors...) {
    @include background(linear-gradient($gradient-startpoint, $colors...));
    $length: length($colors);
    background-color: mix(nth($colors, 1), nth($colors, $length));
}


// Gradient with svg fallback for ie9
@mixin gradient-with-svg($colors...) {
    $experimental-support-for-svg: true;
    @include background(linear-gradient($gradient-startpoint, $colors...));
    $length: length($colors);
    background-color: mix(nth($colors, 1), nth($colors, $length));
}


// directional gradient
@mixin gradient-directional($startpoint, $colors...) {
    @include background(linear-gradient($startpoint, $colors...));
    $length: length($colors);
    background-color: mix(nth($colors, 1), nth($colors, $length));
}


// resets lists
%plain-list {
    list-style: none;
    padding-left: 0;

    > li {
        list-style: none;
        padding-left: 0;
    }
}


// block item  - where text needs to be hidden for image replacement (usually)
@mixin block-item($x, $y: $x) {
    @extend %block-properties;
    padding-top: $y;
    width: $x;
}


// block item helper
%block-properties {
    overflow: hidden;
    height: 0;
    display: block;
}


// new clearfix hack
@mixin clearfix {
    &:before,
    &:after {
        content: " "; /* 1 */
        display: table; /* 2 */
    }

    &:after { clear: both; }

    // For IE 6/7 only
    // Include this rule to trigger hasLayout and contain floats.
    *zoom: 1;
}

// new clearfix hack - extend
%clearfix {
    @include clearfix;
}


// selection color
// includes futureproofing for support of gradients (not surrently in spec)
@mixin selection-color($background, $color: false, $text-shadow: false) {
    ::selection
    {
        @include gradient-with-bgc(lighten($background, 4%), $background, darken($background, 4%));
        @if $color != false {
            color: $color;
        }
        @if $text-shadow == false {
            text-shadow: none;
        } @else {
            text-shadow: $text-shadow;
        }
    }
    ::-moz-selection
    {
        @include gradient-with-bgc(lighten($background, 4%), $background, darken($background, 4%));
        @if $color != false {
            color: $color;
        }
        @if $text-shadow == false {
            text-shadow: none;
        } @else {
            text-shadow: $text-shadow;
        }
    }
}


// For future support for blend modes. Can be tested in Chromium
@mixin blend-mode($mode) {
    -webkit-blend-mode: $mode;
    -moz-blend-mode: $mode;
    -ms-blend-mode: $mode;
    blend-mode: $mode;
}


// code font
%code-font { font-family: $code-font; }

// heading font
%heading-font { font-family: $heading-font; }


// common padding
%standard-padding {
    padding: 10/16 * $grid-padding $grid-padding $grid-padding;
    // (by default: 10/16 * 16 (base font size) = 10px top padding)
}


// better than writing longhand rgba for transparent black
@function black($opacity){
    @return rgba(0, 0, 0, $opacity);
}


// better than writing longhand rgba for transparent white
@function white($opacity){
    @return rgba(255, 255, 255, $opacity);
}


// multi-line text-overflow
// NOTE: usage needs to be very specific and is as follows:
// First, wrap your text element in a div and apply this mixin to it.
// Tweak the height (in your editor - this won't work in dev tools)
// until the ellipsis appears, and be careful that the ellipsis
// doesn't show for content that only *just* fits.
@mixin multiline-text-overflow($height, $color: #fff, $in-media: false) {
    @if ($in-media == true) {
        @include text-overflow-common;
    } @else {
        @extend %multiline-text-overflow;
    }

    height: $height;

    &:before {
        height: $height;
    }

    $rgba: rgba($color, 1);
    $rgb0: transparentize($rgba, 1);

    &:after {
        @include background(linear-gradient(left top, $rgb0, $rgba, $rgba));
    }
}


// helpers for above (emulates text overflow on multilines)
// shouldn't need to use these directly
@mixin multiline-text-overflow-common {
    overflow: hidden;

    &:before {
        content:"";
        float: left;
        width: 5px;
    }
     > *:first-child {
        float: right;
        width: 100%;
        margin-left: -5px;
    }

    > *:last-child {
        padding-bottom: 0;
        margin-bottom: 0;
    }

    &:after {
        content: "\02026";

        @include box-sizing(content-box);

        float: right;
        position: relative;
        top: -25px;
        left: 100%;
        width: 3em;
        margin-left: -3em;
        padding-right: 5px;
        text-align: right;
        background-size: 100% 100%;
    }
}

%multiline-text-overflow {
    @include multiline-text-overflow-common;
}


// single-line text overflow
%text-overflow {
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}


// Sets border-box, as well as width, height, padding and border width, including legacy fallbacks
@mixin legacy-border-box($width: auto, $height: auto, $padding: 0 0 0 0, $border-width: 0 0 0 0) {
    @extend %border-box;

    @if $legacy-support-for-ie {
        @if $width != auto {
            width: $width;
            *width: $width - nth($padding, 2) - nth($padding, 4) - nth($border-width, 2) - nth($border-width, 4);
        }
        @if $height != auto {
            height: $height;
            *height: $height - nth($padding, 1) - nth($padding, 3) - nth($border-width, 1) - nth($border-width, 3);
        }
        padding: $padding;
        border-width: $border-width;
    }
}

// vendor prefixes values of rules
@mixin vendor($property, $value) {
    @each $vendor in webkit, moz, ms, o {
        #{$property}: -#{$vendor}-#{$value};
    }
    #{$property}: #{$value};
}


// vendor prefixes selectors of rules
@mixin vendor-property($property, $value) {
    @each $vendor in webkit, moz, ms, o {
        -#{$vendor}-#{$property}: #{$value};
    }
    #{$property}: #{$value};
}

// For Susy: use when overriding the susy "span-columns" mixin.
// unlike span-columns, this will only reapply the width and padding so that
// output styles aren't bloated with uneccessay floats & display properties
@mixin span-override(
    $columns,
    $context       : $total-columns,
    $padding       : false,
    $from          : $from-direction
) {
    $to       : opposite-position($from);
    $pos      : split-columns-value($columns,position);
    $cols     : split-columns-value($columns,columns);
    $pad-from : relative-width(0 * $gutter-width, $context);
    $pad-to   : relative-width(0 * $gutter-width, $context);

    @if $padding != false {
        $pad-from : nth($padding, 1);

        @if length($padding) > 1 {
            $pad-to: nth($padding, 2);
        } @else {
            $pad-to: $pad-from;
        }

        $pad-from : relative-width($pad-from, $context);
        $pad-to   : relative-width($pad-to, $context);

        padding-#{$from}: $pad-from;
        padding-#{$to}: $pad-to;
    }

    width: columns($cols, $context) - if($border-box-sizing, 0, $pad-to + $pad-from);

    @if ($pos == 'omega') {
        @include omega;
    } @else {
        margin-#{$to}: gutter($context);
    }
}


//box shadow emboss top & bottom
@mixin box-emboss($opacity, $opacity2){
    box-shadow:white($opacity) 0 1px 0, inset black($opacity2) 0 1px 0;
}


//initialises pan picturefill helper css
//this is required for responsive images to work (and can be included below)
@mixin picture-init($classname: picture) {
    .#{$classname} {
        font-family: "0" !important;
        @include at-breakpoint($medium) {
            font-family: "#{no-unit($medium-width)}" !important;
        }
        @include at-breakpoint($large) {
            font-family: "#{no-unit($large-width)}" !important;
        }
    }
}

//@include picture-init;

%border-radius {
    @include border-radius($border-radius);
}

%no-border-radius {
    @include border-radius(0);
}

%transition-all-smooth {
    @include transition(all 0.5s ease);
}

%no-box-shadow {
    @include box-shadow(none);
}

%border-box {
    @include box-sizing(border-box);
}

%appearance-none {
    @include appearance(none);
}

// centers a grid wrapper
%center-grid {
    float: none;
    display: block;
    margin: 0 auto;
    position: relative;
}


// removes border
%no-border {
    border-width: 0;
}


// susy grid forced omega
%force-omega { margin-right: 0!important; }


// forces hasLayout for legacy IEs
%hasLayout {
    position: relative;
    zoom: 1;
}


// hides on mobile
%no-mobile {
    display: none;
    @include at-breakpoint($medium) { display: inline; }
}

// hides on desktop
%mobile-only {
    display: inline-block;
    @include at-breakpoint($medium) { display: none; }
}


// for applying hi-dpi images
@mixin image-2x($image, $width, $height) {
  @media (min--moz-device-pixel-ratio: 1.3),
         (-o-min-device-pixel-ratio: 2.6/2),
         (-webkit-min-device-pixel-ratio: 1.3),
         (min-device-pixel-ratio: 1.3),
         (min-resolution: 1.3dppx) {
    /* on retina, use image that's scaled by 2 */
    background-image: url($image);
    background-size: $width $height;
  }
}


// center block elements
%center-block {
    display: block;
    margin-left: auto;
    margin-right: auto;
}

// cross browser rem font sizes
@mixin font-size($size: 12 ){
    font-size: $size + px; //fallback for old browsers
    font-size: ($size / no-unit($base-font-size)) + rem;
}

@mixin animate-this($animation-property, $animation-duration) {
    @include transition-property($animation-property);
    @include transition-duration($animation-duration);
}

//text shadow extends
%dark-text-shadow { @include text-shadow(rgba(0, 0, 0, 0.3) -1px -1px 0); }
%light-text-shadow { @include text-shadow(rgba(255, 255, 255, 0.0) -1px -1px 0); }

